using UnityEngine;
using UnityEngine.SceneManagement;

public class Introskærm: MonoBehaviour
{
    public void StartGame()
    {
        SceneManager.LoadScene("Niller");
    }
}